--- a/React/car_trading_system/src/App.css
+++ b/React/car_trading_system/src/App.css
@@ -12,9 +12,65 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.input-field {
+  width: 100px;
+  border-radius: 5px;
+  box-shadow: 
+    0 3px 6px rgba(0,0,0,0.16), 
+    0 3px 6px rgba(0,0,0,0.23),
+    0 5px 15px rgba(0,0,0,0.2),
+    0 10px 10px rgba(0,0,0,0.1); /* Multiple shadows for gradient effect */
+  background: linear-gradient(to top, #3d3d3d, #242323);
+  border: none;
+  color: rgb(238, 238, 238);
+  padding: 5px 10px;
+}
 
+.navbar-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.login-button {
+  background-color: #3d3d3d; /* Dark grey background */
+  color: rgb(238, 238, 238); /* White text */
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  box-shadow: 
+    0 3px 6px rgba(0,0,0,0.16), 
+    0 3px 6px rgba(0,0,0,0.23),
+    0 5px 15px rgba(0,0,0,0.2),
+    0 10px 10px rgba(0,0,0,0.1); /* Same box shadows as the input fields */
+}
+.logo {
+  color: rgb(238, 238, 238);
+  font-weight: bold;
+  text-shadow: 2px 2px 3px #000, 3px 3px 5px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+.navbar-custom {
+  background: linear-gradient(to bottom right, rgb(152, 35, 241), #04b4a5);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: 
+    0 1px 1px rgba(0,0,0,0.11), 
+    0 2px 2px rgba(0,0,0,0.12), 
+    0 4px 4px rgba(0,0,0,0.13), 
+    0 8px 8px rgba(0,0,0,0.14), 
+    0 16px 16px rgba(0,0,0,0.15); 
+  transition: box-shadow 0.3s ease;
+}
+
+.login-form {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+}
 .App-header {
-  background-color: #282c34;
+  background-color: #3a5791;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
