--- a/React/car_trading_system/src/App.css
+++ b/React/car_trading_system/src/App.css
@@ -13,6 +13,23 @@
   justify-content: center;
 }
 
+.car-image-container {
+  flex: 1;
+  max-width: 50%;
+  height: 50vh; /* Make the container half the height of the viewport */
+  border: 30px solid transparent;
+  box-sizing: border-box;
+}
+.car-image-container img {
+  width: 100%; /* Make the image adjust to the container's width */
+  height: auto; /* Keep the image's aspect ratio */
+  object-fit: cover;
+}
+.car-details-container {
+  flex: 1;
+  max-width: 50%;
+}
+
 .car-grid-container {
   color: white;
 }
@@ -29,6 +46,11 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.review-box {
+  width: 100%;
+  height: 200px;
+}
+
 .input-field {
   width: 100px;
   border-radius: 5px;
@@ -43,16 +65,33 @@
   padding: 5px 10px;
 }
 
-
-.car-image {
-  width: 250px;  /* Adjust as needed */
-  height: 250px; /* Adjust as needed */
-  object-fit: cover;
+.input-field-review {
+  width: 80%;
+  border-radius: 5px;
+  box-shadow: 
+    0 3px 6px rgba(0,0,0,0.16), 
+    0 3px 6px rgba(0,0,0,0.23),
+    0 5px 15px rgba(0,0,0,0.2),
+    0 10px 10px rgba(0,0,0,0.1); /* Multiple shadows for gradient effect */
+  background: linear-gradient(to top, #3d3d3d, #242323);
+  border: none;
+  color: rgb(238, 238, 238);
+  padding: 5px 10px;
 }
+
 .navbar-content {
   display: flex;
   justify-content: space-between;
   width: 100%;
+}
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+.car-image {
+  width: 250px;  /* Adjust as needed */
+  height: 250px; /* Adjust as needed */
+  object-fit: cover;
 }
 
 .car-details {
@@ -65,9 +104,33 @@
   box-shadow: 0 10px 10px rgba(0,0,0,0.1);
   border-radius: 10px; /* Add this line */
   transition: transform 0.3s ease-in-out; /* Add this line */
-
+  text-decoration: none;
 }
 
+.car-details-one {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+textarea.form-control, input.form-control {
+  background-color: #3d3d3d !important; /* Change to your desired color */
+  color: #eee !important; /* Change to your desired color */
+  border: none !important;
+  box-shadow: 
+    0 3px 6px rgba(0,0,0,0.16), 
+    0 3px 6px rgba(0,0,0,0.23),
+    0 5px 15px rgba(0,0,0,0.2) !important;
+}
+.car-image-one {
+  max-width: 100%;
+  height: auto;
+  border-radius: 15px; /* Add this line */
+  box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+}
+.car-details-one p {
+  border-bottom: 1px solid #4a4a4a;
+  padding: 10px 0;
+}
 .car-details:hover {
   transform: scale(1.05); /* Add this line */
 }
