--- a/React/car_trading_system/src/App.css
+++ b/React/car_trading_system/src/App.css
@@ -50,7 +50,9 @@
   width: 100%;
   height: 200px;
 }
-
+.form-control {
+  background-color: #212020;  /* Light grey */
+}
 .input-field {
   width: 100px;
   border-radius: 5px;
@@ -75,19 +77,18 @@
     0 10px 10px rgba(0,0,0,0.1); /* Multiple shadows for gradient effect */
   background: linear-gradient(to top, #3d3d3d, #242323);
   border: none;
-  color: rgb(238, 238, 238);
+  color: rgb(61, 59, 59);
   padding: 5px 10px;
 }
-
+.form-control {
+  background-color: #363636;  /* Light grey */
+}
 .navbar-content {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
-label {
-  display: block;
-  margin-bottom: 10px;
-}
+
 .car-image {
   width: 250px;  /* Adjust as needed */
   height: 250px; /* Adjust as needed */
@@ -112,15 +113,7 @@ label {
   justify-content: space-between;
   align-items: flex-start;
 }
-textarea.form-control, input.form-control {
-  background-color: #3d3d3d !important; /* Change to your desired color */
-  color: #eee !important; /* Change to your desired color */
-  border: none !important;
-  box-shadow: 
-    0 3px 6px rgba(0,0,0,0.16), 
-    0 3px 6px rgba(0,0,0,0.23),
-    0 5px 15px rgba(0,0,0,0.2) !important;
-}
+
 .car-image-one {
   max-width: 100%;
   height: auto;
@@ -152,6 +145,30 @@ textarea.form-control, input.form-control {
   font-size: 2em;
   font-weight: bold;
 } */
+.field-name {
+  background-color: #363535;  /* Grey background */
+  padding: 5px;  /* Some padding */
+  margin-right: 5px;  /* Some margin to the right */
+  border-radius: 5px;  /* Rounded corners */
+}
+.button-container {
+  justify-content: space-between;
+}
+.button-container .login-button {
+  margin-right: 20px;  /* Adjust as needed */
+}
+.login-button:hover {
+  background-color: #2a2a2a; /* Slightly darker grey */
+}
+textarea.form-control, input.form-control {
+  background-color: #3d3d3d !important; /* Change to your desired color */
+  color: #eee !important; /* Change to your desired color */
+  border: none !important;
+  box-shadow: 
+    0 3px 6px rgba(0,0,0,0.16), 
+    0 3px 6px rgba(0,0,0,0.23),
+    0 5px 15px rgba(0,0,0,0.2) !important;
+}
 .login-button {
   background-color: #3d3d3d; /* Dark grey background */
   color: rgb(238, 238, 238); /* White text */
