--- a/React/car_trading_system/src/App.css
+++ b/React/car_trading_system/src/App.css
@@ -181,6 +181,75 @@ textarea.form-control, input.form-control {
     0 5px 15px rgba(0,0,0,0.2),
     0 10px 10px rgba(0,0,0,0.1); /* Same box shadows as the input fields */
 }
+.dropdown-basic-button {
+  background-color: #3d3d3d; /* Dark grey background */
+  color: rgb(238, 238, 238); /* White text */
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  box-shadow: 
+    0 3px 6px rgba(0,0,0,0.16), 
+    0 3px 6px rgba(0,0,0,0.23),
+    0 5px 15px rgba(0,0,0,0.2),
+    0 10px 10px rgba(0,0,0,0.1); /* Same box shadows as the input fields */
+}
+
+input[type='range'] {
+  width: 200px; /* Adjust as needed */
+  height: 25px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  background: #d3d3d3;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000;
+  background: #3071A9;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+
+input[type='range']::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -8px;
+}
+
+input[type='range']:focus::-webkit-slider-runnable-track {
+  background: #367ebd;
+}
+
+input[type='range']::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000;
+  background: #3071A9;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+
+input[type='range']::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+}
+
 .logo {
   color: rgb(238, 238, 238);
   font-family: "logoFont";
