--- a/React/car_trading_system/src/App.css
+++ b/React/car_trading_system/src/App.css
@@ -175,6 +175,8 @@ textarea.form-control, input.form-control {
   border: none;
   border-radius: 5px;
   padding: 5px 10px;
+  font-family: "logoFont";
+  font-weight: bold;
   box-shadow: 
     0 3px 6px rgba(0,0,0,0.16), 
     0 3px 6px rgba(0,0,0,0.23),
@@ -262,8 +264,8 @@ input[type='range']::-moz-range-thumb {
 .navbar-custom {
   /* background: linear-gradient(to bottom right, rgb(152, 35, 241), #04b4a5); */
   background: linear-gradient(to bottom right, rgb(108, 5, 193), #d4ee0c);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  /* border-bottom-left-radius: 10px; */
+  /* border-bottom-right-radius: 10px; */
   box-shadow: 
     0 1px 1px rgba(0,0,0,0.11), 
     0 2px 2px rgba(0,0,0,0.12), 
@@ -289,6 +291,20 @@ input[type='range']::-moz-range-thumb {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+.carousel-container {
+  background-color: #212020;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  padding: 30px 0; /* adjust as needed */
+  
+}
+.carousel-image {
+  width: 700px; /* adjust as needed */
+  height: 500px; /* adjust as needed */
+  border-radius: 15px;
+  object-fit: cover;
 }
 
 .App-link {
