Carousel, footer, sorting

--- a/React/car_trading_system/src/App.css
+++ b/React/car_trading_system/src/App.css
@@ -264,8 +264,8 @@ input[type='range']::-moz-range-thumb {
 .navbar-custom {
   /* background: linear-gradient(to bottom right, rgb(152, 35, 241), #04b4a5); */
   background: linear-gradient(to bottom right, rgb(108, 5, 193), #d4ee0c);
-  /* border-bottom-left-radius: 10px; */
-  /* border-bottom-right-radius: 10px; */
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   box-shadow: 
     0 1px 1px rgba(0,0,0,0.11), 
     0 2px 2px rgba(0,0,0,0.12), 
@@ -298,7 +298,8 @@ input[type='range']::-moz-range-thumb {
   display: flex;
   justify-content: center;
   padding: 30px 0; /* adjust as needed */
-  
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .carousel-image {
   width: 700px; /* adjust as needed */
@@ -307,6 +308,29 @@ input[type='range']::-moz-range-thumb {
   object-fit: cover;
 }
 
+.main-content {
+  min-height: calc(100vh - 60px); /* adjust as needed */
+  display: flex;
+  flex-direction: column;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #3a5791;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+.car-grid-container a {
+  text-decoration: none;
+}
+.footer-text {
+  color: white; /* or any color that is visible against a dark background */
+}
 .App-link {
   color: #61dafb;
 }
