--- a/React/car_trading_system/src/App.css
+++ b/React/car_trading_system/src/App.css
@@ -132,6 +132,7 @@
   width: 250px;  /* Adjust as needed */
   height: 250px; /* Adjust as needed */
   object-fit: cover;
+  border-radius: 5px;
 }
 
 .car-details {
